# backend

./: .gitignore  .pdm-python  Dockerfile  README.md  alembic.ini  docker-compose.yml  init.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_05_05_1534-7cc16f5d80de_create_users_table.py  2024_05_05_1558-a46c59a60aa0_create_game_sessions_table.py  2024_05_05_1606-e95c73ae611c_rename_game_sessions_table.py  2024_06_03_1240-509b744d1073_update_game_session_table.py  2024_06_03_1243-117993c249b0_update_table_users.py  2024_06_04_1430-aaebe6cbd541_update_table_users.py  2024_06_04_1438-493e89e86379_update_table_users.py  2024_06_05_1249-56286d286def_init_database.py  2024_06_06_1039-abf230c77a60_init_database.py  2024_06_06_1230-5e58457cd4b9_update_table_game_sessions_and_add_.py  2024_06_06_1240-f8cc887a93de_update_table_game_sessions_and_add_.py  2024_06_06_1241-1584e60aaa17_update_table_game_sessions_and_add_.py  2024_06_06_1307-3cfccde13684_update_table_ratings.py  2024_06_07_1003-29c79b28a951_init_database.py  2024_06_07_1306-a8ec91b73e71_add_achievement.py  2024_06_07_1310-0602957e2411_add_achievement.py  2024_06_07_1311-b284f3c2c54f_add_achievement.py  2024_06_07_1319-ae7efaf006c8_add_achievement_association_table.py  2024_06_07_1325-7d0c597c9c90_add_achievement_association_table.py  2024_06_07_1328-1f60ed6049aa_add_achievement_association_table.py  2024_06_07_1332-689ae6e805b6_add_achievement_association_table.py  2024_06_07_1348-0fbc69ab2798_add_achievement_association_table.py  2024_06_07_1353-d2c88d8fdd8f_add_achievement_association_table.py  2024_06_07_1402-456317deda57_add_achievement_association_table.py  2024_06_07_1407-ae0d9897087f_add_achievement_association_table.py  2024_06_07_1425-e53523b1c925_add_achievement_association_table.py  2024_06_07_1426-26f8ec221d95_add_achievement_association_table.py  2024_06_07_1758-f1e69e2ffb98_init_database.py  2024_06_08_1103-adb866ab5d7c_update_table_achievements.py  2024_06_09_2054-351db0787c37_init_database.py
app/: main.py
app/cruds/: game_session_crud.py  user_crud.py
app/data/: __init__.py  config.py  settings.py
app/dependencies/: game_session_dependencies.py  user_dependencies.py
app/models/: __init__.py  db_helper.py  (+2 more)
src/: main.py
(+39 files in other folders)
