[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = ["ITSDENISSKA <fotiev.d1991@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.110.2"
uvicorn = { extras = ["standard"], version = ">=0.29.0" }
python-multipart = ">=0.0.9"
pydantic = { extras = ["standard"], version = ">=2.7.1" }
pydantic-settings = ">=2.2.1"
sqlalchemy = { extras = ["asyncio"], version = ">=2.0.29" }
psycopg2-binary = "==2.9.9"
asyncpg = ">=0.29.0"
ruff = ">=0.4.3"
alembic = ">=1.13.1"
pyjwt = { extras = ["crypto"], version = ">=2.8.0" }
bcrypt = ">=4.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
